@@ -17,14 +17,17 @@
 package io.warp10.script.functions;
 
 import com.geoxp.GeoXPLib;
+import io.warp10.continuum.gts.GTSEncoder;
 import io.warp10.continuum.gts.GeoTimeSerie;
 import io.warp10.script.NamedWarpScriptFunction;
-import io.warp10.script.WarpScriptMapperFunction;
-import io.warp10.script.WarpScriptReducerFunction;
-import io.warp10.script.WarpScriptStackFunction;
+import io.warp10.script.WarpScriptAggregatorFunction;
 import io.warp10.script.WarpScriptException;
+import io.warp10.script.WarpScriptFillerFunction;
+import io.warp10.script.WarpScriptFilterFunction;
+import io.warp10.script.WarpScriptNAryFunction;
 import io.warp10.script.WarpScriptStack;
 import io.warp10.script.WarpScriptStack.Macro;
+import io.warp10.script.WarpScriptStackFunction;
 import org.apache.commons.math3.linear.ArrayRealVector;
 import org.apache.commons.math3.linear.RealMatrix;
 import processing.core.PFont;
@@ -34,10 +37,10 @@ import processing.core.PShape;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.util.BitSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.BitSet;
 import java.util.Vector;
 import java.util.concurrent.atomic.AtomicLong;
 
@@ -54,9 +57,12 @@ public class TYPEOF extends NamedWarpScriptFunction implements WarpScriptStackFu
   public static final String TYPE_LIST = "LIST";
   public static final String TYPE_MAP = "MAP";
   public static final String TYPE_MACRO = "MACRO";
-  public static final String TYPE_MAPPER = "MAPPER";
-  public static final String TYPE_REDUCER = "REDUCER";
+  public static final String TYPE_AGGREGATOR = "AGGREGATOR";
+  public static final String TYPE_FILLER = "FILLER";
+  public static final String TYPE_FILTER = "FILTER";
+  public static final String TYPE_OPERATOR = "OPERATOR";
   public static final String TYPE_GTS = "GTS";
+  public static final String TYPE_GTSENCODER = "GTSENCODER";
   public static final String TYPE_BYTES = "BYTES";
   public static final String TYPE_PGRAPHICSIMAGE = "PGRAPHICS";
   public static final String TYPE_GEOSHAPE = "GEOSHAPE";
@@ -70,8 +76,13 @@ public class TYPEOF extends NamedWarpScriptFunction implements WarpScriptStackFu
   public static final String TYPE_PSHAPE = "PSHAPE";
   public static final String TYPE_COUNTER = "COUNTER";
 
-  public static interface Typeofable {
-    public String typeof();
+  /**
+   * Interface to be used by extensions and plugins to define a new type.
+   * Classes implementing this interface MUST have a parameterless public constructor not throwing exception for
+   * typeof(Class) to work.
+   */
+  public interface Typeofable {
+    String typeof();
   }
 
   public TYPEOF(String name) {
@@ -81,7 +92,7 @@ public class TYPEOF extends NamedWarpScriptFunction implements WarpScriptStackFu
   @Override
   public Object apply(WarpScriptStack stack) throws WarpScriptException {
     Object o = stack.pop();
-    stack.push(this.typeof(o));
+    stack.push(typeof(o));
     return stack;
   }
 
@@ -97,57 +108,72 @@ public class TYPEOF extends NamedWarpScriptFunction implements WarpScriptStackFu
 
   public static String typeof(Class c) {
     if (String.class.isAssignableFrom(c)) {
-      return (TYPE_STRING);
+      return TYPE_STRING;
     } else if (Long.class.isAssignableFrom(c) || Integer.class.isAssignableFrom(c) || Short.class.isAssignableFrom(c) || Byte.class.isAssignableFrom(c) || BigInteger.class.isAssignableFrom(c)) {
-      return (TYPE_LONG);
+      return TYPE_LONG;
     } else if (Double.class.isAssignableFrom(c) || Float.class.isAssignableFrom(c) || BigDecimal.class.isAssignableFrom(c)) {
-      return (TYPE_DOUBLE);
+      return TYPE_DOUBLE;
     } else if (Boolean.class.isAssignableFrom(c)) {
-      return (TYPE_BOOLEAN);
+      return TYPE_BOOLEAN;
     } else if (Vector.class.isAssignableFrom(c)) {  // place before List. Vector implements List.
-      return (TYPE_VECTOR);
+      return TYPE_VECTOR;
     } else if (List.class.isAssignableFrom(c)) {
-      return (TYPE_LIST);
+      return TYPE_LIST;
     } else if (Map.class.isAssignableFrom(c)) {
-      return (TYPE_MAP);
+      return TYPE_MAP;
     } else if (Macro.class.isAssignableFrom(c)) {
-      return (TYPE_MACRO);
-    } else if (WarpScriptMapperFunction.class.isAssignableFrom(c)) {
-      return (TYPE_MAPPER);
-    } else if (WarpScriptReducerFunction.class.isAssignableFrom(c)) {
-      return (TYPE_REDUCER);
+      return TYPE_MACRO;
+    } else if (WarpScriptAggregatorFunction.class.isAssignableFrom(c)) {
+      return TYPE_AGGREGATOR;
+    } else if (WarpScriptFillerFunction.class.isAssignableFrom(c)) {
+      return TYPE_FILLER;
+    } else if (WarpScriptFilterFunction.class.isAssignableFrom(c)) {
+      return TYPE_FILTER;
+    } else if (WarpScriptNAryFunction.class.isAssignableFrom(c)) {
+      return TYPE_OPERATOR;
     } else if (GeoTimeSerie.class.isAssignableFrom(c)) {
-      return (TYPE_GTS);
+      return TYPE_GTS;
+    } else if (GTSEncoder.class.isAssignableFrom(c)) {
+      return TYPE_GTSENCODER;
     } else if (byte[].class.isAssignableFrom(c)) {
-      return (TYPE_BYTES);
+      return TYPE_BYTES;
     } else if (PGraphics.class.isAssignableFrom(c)) {
-      return (TYPE_PGRAPHICSIMAGE);
+      return TYPE_PGRAPHICSIMAGE;
     } else if (PImage.class.isAssignableFrom(c)) {
-      return (TYPE_PIMAGE);
+      return TYPE_PIMAGE;
     } else if (PFont.class.isAssignableFrom(c)) {
-      return (TYPE_PFONT);
+      return TYPE_PFONT;
     } else if (PShape.class.isAssignableFrom(c)) {
-      return (TYPE_PSHAPE);
+      return TYPE_PSHAPE;
     } else if (GeoXPLib.GeoXPShape.class.isAssignableFrom(c)) {
-      return (TYPE_GEOSHAPE);
+      return TYPE_GEOSHAPE;
     } else if (Set.class.isAssignableFrom(c)) {
-      return (TYPE_SET);
+      return TYPE_SET;
     } else if (BitSet.class.isAssignableFrom(c)) {
-      return (TYPE_BITSET);
+      return TYPE_BITSET;
     } else if (ArrayRealVector.class.isAssignableFrom(c)) {
-      return (TYPE_REALVECTOR);
+      return TYPE_REALVECTOR;
     } else if (RealMatrix.class.isAssignableFrom(c)) {
-      return (TYPE_REALMATRIX);
+      return TYPE_REALMATRIX;
     } else if (AtomicLong.class.isAssignableFrom(c)) {
-      return (TYPE_COUNTER);
+      return TYPE_COUNTER;
     } else if (Typeofable.class.isAssignableFrom(c)) {
       try {
-        return (((Typeofable) c.newInstance()).typeof());
-      } catch(Exception e) {
-        return ("X-" + c.getSimpleName().toUpperCase());
+        return "X-" + ((Typeofable) c.getDeclaredConstructor().newInstance()).typeof();
+      } catch (Exception e) {
+        return defaultType(c);
       }
     } else {
-      return (c.getSimpleName().toUpperCase());
+      return defaultType(c);
+    }
+  }
+
+  private static String defaultType(Class c) {
+    String canonicalName = c.getCanonicalName();
+    if (null == canonicalName) {
+      return "X-Local-Anonymous-Class)";
+    } else {
+      return "X-" + canonicalName;
     }
   }
 
